--- a/app/src/main/res/layout/fragment_second_menu.xml
+++ b/app/src/main/res/layout/fragment_second_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
@@ -61,7 +61,7 @@
                     app:tabIndicatorColor="@color/colorPrimary"
                     app:tabIndicatorHeight="3dp"
                     app:tabMode="fixed"
-                    app:tabSelectedTextColor="@color/white"
+                    app:tabSelectedTextColor="@color/colorPrimaryDark"
                     app:tabTextAppearance="@style/TabText" />
 
             <androidx.viewpager.widget.ViewPager
@@ -73,4 +73,4 @@
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</RelativeLayout>
+</FrameLayout>
