--- a/app/src/main/res/layout/fragment_second_menu.xml
+++ b/app/src/main/res/layout/fragment_second_menu.xml
@@ -11,7 +11,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/layoutNullDestination"
-            android:visibility="gone"
     >
         <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="200dp"
@@ -46,7 +45,9 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+    android:visibility="gone"
+    android:id="@+id/destinationNotNull">
 
         <LinearLayout
                 android:layout_width="match_parent"
