--- a/app/src/main/res/navigation/primary_navigation.xml
+++ b/app/src/main/res/navigation/primary_navigation.xml
@@ -10,9 +10,9 @@
               android:label="fragment_second_menu" tools:layout="@layout/fragment_second_menu">
         <action android:id="@+id/action_secondMenuFragment_to_destinationFragment"
                 app:destination="@id/destinationFragment"/>
-        <argument android:name="category1Args" app:argType="string" android:defaultValue="1"/>
-        <argument android:name="category2Args" app:argType="string" android:defaultValue="1"/>
-        <argument android:name="category3Args" app:argType="string" android:defaultValue="1"/>
+        <argument android:name="category1Args" app:argType="string" android:defaultValue="null" app:nullable="true"/>
+        <argument android:name="category2Args" app:argType="string" android:defaultValue="null" app:nullable="true"/>
+        <argument android:name="category3Args" app:argType="string" app:nullable="true" android:defaultValue="null"/>
     </fragment>
     <fragment android:id="@+id/thirdMenuFragment" android:name="com.aldi.liboorean.Menu.ThirdMenuFragment"
               android:label="fragment_third_menu" tools:layout="@layout/fragment_third_menu"/>
