--- a/app/src/main/res/layout/fragment_promo_detail.xml
+++ b/app/src/main/res/layout/fragment_promo_detail.xml
@@ -1,14 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".Detail.PromoDetailFragment">
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+>
+    <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:id="@+id/layoutPromoDetail">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+        <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/buttonBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="18dp"
+                app:srcCompat="@drawable/ic_arrow_back"
+        />
 
-</FrameLayout>
+        <RelativeLayout
+                android:id="@+id/imgPromo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_below="@id/buttonBack">
+            <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+            >
+
+                <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/detail_promo"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:background="@color/colorPrimary"
+                />
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
+
+        <TextView
+                android:layout_below="@id/imgPromo"
+                android:id="@+id/tv_item_description"
+                android:layout_width="match_parent"
+                android:layout_height="301dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="16dp"
+                android:lineSpacingMultiplier="1"
+        />
+        <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnPromoDetail"
+                android:layout_below="@id/tv_item_description"
+                android:layout_marginTop="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="@string/button_lanjut"
+                android:background="@drawable/bg_rounded_secondary"
+                style="@style/Button"/>
+
+    </RelativeLayout>
+</ScrollView>
